--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>Tobias Spilleman Portfolio</h1>
+        <h1>Tobias Spilleman Portfoli</h1>
         <p>I am currently working on this portfolio. Please come back later!</p>
     </div>
 </body>
